# cocktail-opt

./: .editorconfig  .flake8  .pylintrc  Makefile  README.md  pyproject.toml  setup.py
.github/workflows/: test.yaml
cocktail_opt/: dataset.py  model.py
data/: cocktails.csv  cocktails.json  ingredients.csv  ingredients.json
src/cocktail_opt/: dataset.py
tests/: conftest.py  test_dataset.py  test_model.py
