[tool.poetry]
name = "cocktail-opt"
version = "0.1.0"
description = "Just-for-fun liquor cabinet optimizer"
authors = ["Ben Cunningham <benjamescunningham@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.22.4"
pandas = "^1.4.2"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
flake8 = "^4.0.1"
isort = "^5.10.1"
mypy = "^0.960"
pylint = "^2.14.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
