[tool.poetry]
name = "cocktail-opt"
version = "0.1.0"
description = "Just-for-fun liquor cabinet optimizer"
authors = ["Ben Cunningham <benjamescunningham@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
mip = "^1.14.1"
numpy = "^1.22.4"
pandas = "^1.4.2"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
flake8 = "^4.0.1"
isort = "^5.10.1"
mypy = "^0.960"
pylint = "^2.14.0"
pytest = "^7.1.2"
pytest-cov = "^3.0.0"

[tool.coverage.report]
exclude_lines = ['if __name__ == "__main__":']

[tool.isort]
ensure_newline_before_comments = true
force_grid_wrap = 0
include_trailing_comma = true
known_first_party = "cocktail_opt"
known_local_folder = "tests"
lines_after_imports = 2
multi_line_output = 3
profile = "black"
use_parentheses = true

[tool.mypy]
disallow_incomplete_defs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
